Import CSS into HTML

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Calculator JS</title>
+    <link rel="stylesheet" href="calculator.css">
   </head>
   <body>
     <div class="calculator">
